syntax = "proto3";
option java_package = "com.type2labs.undersea.prospect";
option java_outer_classname = "RaftProtos";
option java_generate_equals_and_hash = true;
package proto;
import "google/protobuf/any.proto";

service AcquireStatusService {
    rpc GetStatus (AcquireStatusRequest) returns (AcquireStatusResponse) {
    }
}

message RaftPeer {
    int32 port = 1;
    string host = 2;
}

message AcquireStatusRequest {
    RaftPeer raftPeer = 1;
    string status = 2;
}

message AcquireStatusResponse {
    RaftPeer raftPeer = 1;
    repeated Tuple status = 2;
}

message Tuple {
    string fieldType = 1;
    string value = 2;
}

